--- a/urbanstory/pages/style/logo.html
+++ b/urbanstory/pages/style/logo.html
@@ -28,15 +28,15 @@
 			<div class="col-xs-4">
 				<img src="../../src/img/logo/img-logo-corporate-long.svg" alt="img-logo-corporate-long" height="40px">
 				<p>
-						<a class="uh-btn" href="files/logo/img-logo-corporate-long.png" target="_blank">Download PNG</a>
-						<a class="uh-btn" href="files/logo/img-logo-corporate-long.svg" target="_blank">Download SVG</a>
+						<a class="uh-btn" href="https://cldup.com/qaFrs6iQYH.png" target="_blank">Download PNG</a>
+						<a class="uh-btn" href="https://cldup.com/o6bcT2BoXB.svg" target="_blank">Download SVG</a>
 				</p>
 			</div>
 			<div class="col-xs-4">
 				<img src="../../src/img/logo/img-logo-corporate-short.svg" alt="img-logo-corporate-short." height="40px">
 				<p>
-						<a class="uh-btn" href="files/logo/img-logo-corporate-short.png" target="_blank">Download PNG</a>
-						<a class="uh-btn" href="files/logo/img-logo-corporate-short.svg" target="_blank">Download SVG</a>
+						<a class="uh-btn" href="https://cldup.com/9css1FvNaA.png" target="_blank">Download PNG</a>
+						<a class="uh-btn" href="https://cldup.com/X39TywgY2P.svg" target="_blank">Download SVG</a>
 				</p>
 			</div>
 			<div class="col-xs-4">
@@ -51,15 +51,15 @@
 			<div class="col-xs-4">
 				<img src="../../src/img/logo/img-logo-jobseeker-long.svg" alt="img-logo-jobseeker-long" height="40px">
 				<p>
-						<a class="uh-btn" href="files/logo/img-logo-jobseeker-long.png" target="_blank">Download PNG</a>
-						<a class="uh-btn" href="files/logo/img-logo-jobseeker-long.svg" target="_blank">Download SVG</a>
+						<a class="uh-btn" href="https://cldup.com/Xhhwi-gMGp.png" target="_blank">Download PNG</a>
+						<a class="uh-btn" href="https://cldup.com/Kzph03nn30.svg" target="_blank">Download SVG</a>
 				</p>
 			</div>
 			<div class="col-xs-4">
 					<img src="../../src/img/logo/img-logo-jobseeker-short.svg" alt="img-logo-jobseeker-short" height="40px">
 					<p>
-							<a class="uh-btn" href="files/logo/img-logo-jobseeker-short.png" target="_blank">Download PNG</a>
-							<a class="uh-btn" href="files/logo/img-logo-jobseeker-short.svg" target="_blank">Download SVG</a>
+							<a class="uh-btn" href="https://cldup.com/4eCl0sn6fD.png" target="_blank">Download PNG</a>
+							<a class="uh-btn" href="https://cldup.com/K7vusLvdb1.svg" target="_blank">Download SVG</a>
 					</p>
 			</div>
 			<div class="col-xs-4">
@@ -76,15 +76,15 @@
 			<div class="col-xs-4">
 					<img src="../../src/img/logo/img-logo-gray-long.svg" alt="img-logo-gray-long" height="40px">
 					<p>
-							<a class="uh-btn" href="files/logo/img-logo-gray-long.png" target="_blank">Download PNG</a>
-							<a class="uh-btn" href="files/logo/img-logo-gray-long.svg" target="_blank">Download SVG</a>
+							<a class="uh-btn" href="https://cldup.com/6ALb3o0RF0.png" target="_blank">Download PNG</a>
+							<a class="uh-btn" href="https://cldup.com/wyXzpssOeR.svg" target="_blank">Download SVG</a>
 					</p>
 			</div>
 			<div class="col-xs-4">
 					<img src="../../src/img/logo/img-logo-gray-short.svg" alt="img-logo-gray-short" height="40px">
 					<p>
-							<a class="uh-btn" href="files/logo/img-logo-gray-short.png" target="_blank">Download PNG</a>
-							<a class="uh-btn" href="files/logo/img-logo-gray-short.svg" target="_blank">Download SVG</a>
+							<a class="uh-btn" href="https://cldup.com/4lfRY3L6HQ.png" target="_blank">Download PNG</a>
+							<a class="uh-btn" href="https://cldup.com/QizdRvcYhw.svg" target="_blank">Download SVG</a>
 					</p>
 			</div>
 			<div class="col-xs-4">
@@ -101,15 +101,15 @@
 			<div class="col-xs-4">
 					<img src="../../src/img/logo/img-logo-white-long.svg" alt="img-logo-white-long" height="40px">
 					<p>
-							<a class="uh-btn" href="files/logo/img-logo-white-long.png" target="_blank">Download PNG</a>
-							<a class="uh-btn" href="files/logo/img-logo-white-long.svg" target="_blank">Download SVG</a>
+							<a class="uh-btn" href="https://cldup.com/0L2spRwNR7.png" target="_blank">Download PNG</a>
+							<a class="uh-btn" href="https://cldup.com/f00teFGuZ8.svg" target="_blank">Download SVG</a>
 					</p>
 			</div>
 			<div class="col-xs-4">
 					<img src="../../src/img/logo/img-logo-white-short.svg" alt="img-logo-white-short" height="40px">
 					<p>
-							<a class="uh-btn" href="files/logo/img-logo-white-short.png" target="_blank">Download PNG</a>
-							<a class="uh-btn" href="files/logo/img-logo-white-short.svg" target="_blank">Download SVG</a>
+							<a class="uh-btn" href="https://cldup.com/gotNHt_3kx.png" target="_blank">Download PNG</a>
+							<a class="uh-btn" href="https://cldup.com/ecL_AQLq_p.svg" target="_blank">Download SVG</a>
 					</p>
 			</div>
 			<div class="col-xs-4">
